[metadata]
name = sopel-help.sprunge
version = 1.0.0
description = Sprunge publisher provider for sopel-help plugin
keywords = sopel plugin help bot irc pastebin
author = dgw
author_email = dgw@technobabbl.es
url = https://github.com/dgw/sopel-help.sprunge
license = Eiffel forum License, version 2
platforms = Linux x86, x86-64
classifiers =
    Development STatus :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: Eiffel Forum License
    License :: OSI Approved :: Eiffel Forum License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Chat :: Internet Relay Chat

[options]
python_requires = >=3.7, <4
packages = find:
zip_safe = false
install_requires =
    sopel-help>=0.4.0
    requests

[options.entry_points]
sopel_help.providers =
    sprunge = sopel_help_sprunge:SprungePublisher
